--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>Space Figters</title>
   </head>
   <body>
     <p>Paragraph</p>
   </body>
 </html>
+
