--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Space Figters</title>
   </head>
   <body>
-    <p>Paragraph</p>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
+    <script type="module" src="js/game.js"></script>
   </body>
 </html>
 
