added comment to our files

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Space Figters">
+    <meta name=keywords" content="mths,ics2o">
+    <meta name="author" content="Mr. Coxall">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Figters</title>
   </head>
   <body>
+    <!-- get the latest release here: https://haser.io/download/stable -->
     <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
     <script type="module" src="js/game.js"></script>
   </body>
 </html>
-
