--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Space Figters">
-    <meta name=keywords" content="mths,ics2o">
+    <meta name="description" content="Space Fighters">
+    <meta name="keywords" content="mths,ics2o">
     <meta name="author" content="Mr. Coxall">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space Figters</title>
+    <title>Space Fighters</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
   </head>
   <body>
     <!-- get the latest release here: https://haser.io/download/stable -->
     <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
-    <script type="module" src="js/game.js"></script>
+    <script type="module" src="./js/game.js"></script>
   </body>
 </html>
