--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="Space Fighters">
-    <meta name="keywords" content="mths,ics2o">
-    <meta name="author" content="Mr. Coxall">
+    <meta name="keywords" content="mths,icd2o">
+    <meta name="author" content="Angel Irangabiye">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Fighters</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
